Выполняет задание 2 - Анимируем смены состояний интерактивных элементов

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -11,12 +11,17 @@
 @import "blocks/chat.scss";
 @import "blocks/disclaimer.scss";
 @import "blocks/form.scss";
+@import "blocks/form-animation.scss";
 @import "blocks/game.scss";
 @import "blocks/intro.scss";
+@import "blocks/intro-animation.scss";
 @import "blocks/page-header.scss";
+@import "blocks/page-header-animation.scss";
 @import "blocks/prizes.scss";
 @import "blocks/result.scss";
 @import "blocks/rules.scss";
 @import "blocks/screen.scss";
 @import "blocks/slider.scss";
+@import "blocks/slider-animation.scss";
+@import "blocks/social-block-animation.scss";
 @import "blocks/social-block.scss";
