--- a/source/scss/blocks/form-animation.scss
+++ b/source/scss/blocks/form-animation.scss
@@ -5,7 +5,7 @@
   display: flex;
 
   @media (min-width: $stop-scaling) {
-    margin-right: 30px;
+    margin-right: 3rem;
     width: calc(100% - 210px);
   }
 
@@ -34,8 +34,7 @@
 
     &::placeholder {
       opacity: 0;
-      transition: opacity 0.2s;
-      transition-delay: 0.4s;
+      transition: opacity 0.2s ease 0.4s;
     }
   }
 
