--- a/source/scss/blocks/slider-animation.scss
+++ b/source/scss/blocks/slider-animation.scss
@@ -1,8 +1,9 @@
 .slider__item-text {
   opacity: 0;
-  transform: translateX(40px);
-  transition: opacity 0.6s, transform 0.6s;
-  transition-delay: 0.2s;
+  transform: translateX(4rem);
+  transition:
+    opacity 0.6s ease 0.2s,
+    transform 0.6s ease 0.2s;
 
   .screen.active .slider__item.swiper-slide-active & {
     opacity: 1;
