--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -19,3 +19,5 @@ $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 
 $index: 1.38871;
+
+$cubic-bezier-almost-done-at-half: cubic-bezier(0.27, 0.69, 0.26, 0.96);
