--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/result.scss";
 @import "blocks/rules.scss";
 @import "blocks/screen.scss";
+@import "blocks/screen-animation.scss";
 @import "blocks/slider.scss";
 @import "blocks/slider-animation.scss";
 @import "blocks/social-block-animation.scss";
