Выполняет задание 4 - Анимируем фон при переключении экранов

--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -146,3 +146,35 @@
     }
   }
 }
+
+.form__field-container {
+  flex: none;
+  margin-right: 3rem;
+  width: calc(100% - 21rem);
+  display: flex;
+
+  @media (min-width: $stop-scaling) {
+    margin-right: 3rem;
+    width: calc(100% - 210px);
+  }
+
+  @media (orientation: portrait) {
+    margin-right: 1rem;
+    width: calc(100% - 5rem);
+  }
+
+  @media (max-width: $tablet) and (orientation: landscape) {
+    width: calc(100% - 9rem);
+  }
+
+  @media (max-width: $mobile) and (orientation: landscape) {
+    margin-right: 1rem;
+    width: calc(100% - 5rem);
+  }
+}
+
+.form__field-container .form__field {
+  margin-left: auto;
+  margin-right: 0;
+  width: 100%;
+}
