Выполняет задание 5 - Добавляем анимацию блоков

--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -144,9 +144,9 @@
     font-size: 1.2rem;
   }
 
-  &::before {
-    content: counter(li);
-    counter-increment: li;
+  &::before,
+  &::after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -155,7 +155,6 @@
     font-family: $font-alt;
     font-weight: 400;
     font-size: 2.4rem;
-    background-color: $c-purple;
     border-radius: 50%;
     line-height: 5rem;
     text-align: center;
@@ -175,6 +174,16 @@
       line-height: 3rem;
       font-size: 1.4rem;
     }
+  }
+
+  &::before {
+    content: "";
+    background-color: $c-purple;
+  }
+
+  &::after {
+    content: counter(li);
+    counter-increment: li;
   }
 
   p {
