--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -4,6 +4,7 @@
 @import "general/mixins.scss";
 @import "general/fonts.scss";
 @import "general/scaffolding.scss";
+@import "general/keyframes.scss";
 
 // Blocks
 @import "blocks/animation-screen.scss";
@@ -11,18 +12,19 @@
 @import "blocks/chat.scss";
 @import "blocks/disclaimer.scss";
 @import "blocks/form.scss";
-@import "blocks/form-animation.scss";
 @import "blocks/game.scss";
 @import "blocks/intro.scss";
-@import "blocks/intro-animation.scss";
 @import "blocks/page-header.scss";
-@import "blocks/page-header-animation.scss";
 @import "blocks/prizes.scss";
 @import "blocks/result.scss";
 @import "blocks/rules.scss";
 @import "blocks/screen.scss";
-@import "blocks/screen-animation.scss";
 @import "blocks/slider.scss";
-@import "blocks/slider-animation.scss";
 @import "blocks/social-block.scss";
+@import "blocks/form-animation.scss";
+@import "blocks/intro-animation.scss";
+@import "blocks/page-header-animation.scss";
+@import "blocks/screen-animation.scss";
+@import "blocks/slider-animation.scss";
 @import "blocks/social-block-animation.scss";
+@import "blocks/rules-animation.scss";
