--- a/source/scss/blocks/social-block-animation.scss
+++ b/source/scss/blocks/social-block-animation.scss
@@ -27,8 +27,14 @@
       opacity: 1;
       transform: translateY(0);
       transition:
-        opacity 0.6s ease var(--transition-delay),
-        transform 0.6s ease var(--transition-delay);
+        opacity 0.6s,
+        transform 0.6s;
+
+      @for $i from 1 through 10 {
+        &:nth-of-type(#{$i}) {
+          transition-delay: #{0.1 + 0.1 * $i}s;
+        }
+      }
     }
   }
 }
