--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -1,4 +1,4 @@
-@keyframes scale-up {
+@keyframes bounce-in {
   from {
     transform: scale(0);
   }
@@ -8,7 +8,7 @@
   }
 }
 
-@keyframes opacity-up {
+@keyframes fade-in {
   from {
     opacity: 0;
   }
@@ -18,27 +18,19 @@
   }
 }
 
-@keyframes translate-left {
+@keyframes fade-in-left {
   from {
+    opacity: 0;
     transform: translateX(1rem);
   }
 
   to {
+    opacity: 1;
     transform: translateX(0);
   }
 }
 
-@keyframes dark-text-opacity-up {
-  from {
-    color: rgba($c-dark, 0);
-  }
-
-  to {
-    color: rgba($c-dark, 1);
-  }
-}
-
-@keyframes btn-background {
+@keyframes expand-btn-background {
   from {
     width: 6rem;
     opacity: 0;
