--- a/source/scss/blocks/slider-animation.scss
+++ b/source/scss/blocks/slider-animation.scss
@@ -2,8 +2,8 @@
   opacity: 0;
   transform: translateX(4rem);
   transition:
-    opacity 0.6s ease 0.2s,
-    transform 0.6s ease 0.2s;
+    opacity 0.6s ease 0.4s,
+    transform 0.6s ease 0.4s;
 
   .screen.active .slider__item.swiper-slide-active & {
     opacity: 1;
@@ -15,6 +15,46 @@
       opacity: 1;
       transform: translateX(0);
       transition-delay: 0.4s;
+    }
+  }
+}
+
+.slider__item-title {
+  .screen.active .slider__item.swiper-slide-active & {
+    $delay: 0s;
+    $rate: 1;
+    $step: 0.05s;
+
+    .accent-line span {
+      animation: bounce-in-up 0.5s ease $delay both;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(1) {
+      animation-delay: $delay + $rate * $step * 3;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(2) {
+      animation-delay: $delay + $rate * $step * 2;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(3) {
+      animation-delay: $delay + $rate * $step * 1;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(4) {
+      animation-delay: $delay + $rate * $step * 2;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(5) {
+      animation-delay: $delay + $rate * $step * 3;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(6) {
+      animation-delay: $delay + $rate * $step * 2;
+    }
+
+    .accent-line:nth-child(1) span:nth-child(7) {
+      animation-delay: $delay + $rate * $step * 1;
     }
   }
 }
