--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -8,6 +8,16 @@
   }
 }
 
+@keyframes bounce-in-up {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
+
 @keyframes fade-in {
   from {
     opacity: 0;
