--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -8,6 +8,7 @@
 
 // Blocks
 @import "blocks/animation-screen.scss";
+@import "blocks/accent-line.scss";
 @import "blocks/btn.scss";
 @import "blocks/chat.scss";
 @import "blocks/disclaimer.scss";
@@ -22,8 +23,10 @@
 @import "blocks/slider.scss";
 @import "blocks/social-block.scss";
 @import "blocks/form-animation.scss";
+@import "blocks/game-animation.scss";
 @import "blocks/intro-animation.scss";
 @import "blocks/page-header-animation.scss";
+@import "blocks/prizes-animation.scss";
 @import "blocks/screen-animation.scss";
 @import "blocks/slider-animation.scss";
 @import "blocks/social-block-animation.scss";
