--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -29,5 +29,6 @@
 @import "blocks/prizes-animation.scss";
 @import "blocks/screen-animation.scss";
 @import "blocks/slider-animation.scss";
-@import "blocks/social-block-animation.scss";
+@import "blocks/result-animation.scss";
 @import "blocks/rules-animation.scss";
+@import "blocks/social-block-animation.scss";
