--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -1,20 +1,20 @@
 @keyframes bounce-in {
   from {
-    transform: scale(0);
+    transform: scale3d(0, 0, 1);
   }
 
   to {
-    transform: scale(1);
+    transform: scale3d(1, 1, 1);
   }
 }
 
 @keyframes bounce-in-up {
   from {
-    transform: translateY(100%);
+    transform: translate3d(0, 100%, 0);
   }
 
   to {
-    transform: translateY(0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -31,12 +31,12 @@
 @keyframes fade-in-left {
   from {
     opacity: 0;
-    transform: translateX(1rem);
+    transform: translate3d(1rem, 0, 0);
   }
 
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
