--- a/source/scss/general/mixins.scss
+++ b/source/scss/general/mixins.scss
@@ -76,3 +76,17 @@
     will-change: transform;
   }
 }
+
+@mixin accent-animation($duration, $delay, $rate, $step, $orders...) {
+  .accent-line span {
+    animation: bounce-in-up #{$rate * $duration} ease #{$delay} both;
+  }
+
+  @for $lineNumber from 1 through length($orders) {
+    @for $letterNumber from 1 through length(nth($orders, $lineNumber)) {
+      .accent-line:nth-child(#{$lineNumber}) span:nth-child(#{$letterNumber}) {
+        animation-delay: $delay + $rate * $step * nth(nth($orders, $lineNumber), $letterNumber);
+      }
+    }
+  }
+}
