--- a/source/scss/blocks/form-animation.scss
+++ b/source/scss/blocks/form-animation.scss
@@ -1,21 +1,30 @@
 .form__field {
   .form__field-container & {
-    width: 0;
-    opacity: 0;
-    transition: width 0.6s ease 1.8s, opacity 0s ease 1.8s;
+    $delay: 1.8s;
+    $rate: 1;
 
-    &::placeholder {
+    &--input {
       opacity: 0;
-      transition: opacity 0.2s ease 2.2s;
+      transition: opacity #{$rate * 0.2s} ease #{$delay + 0.4s * $rate};
+    }
+
+    &--background {
+      width: 0;
+      opacity: 0;
+      transition:
+        width #{$rate * 0.6s} ease #{$delay},
+        opacity 0s ease #{$delay};
     }
   }
 
   .screen.active .form__field-container &,
   .screen--show .form__field-container & {
-    width: 100%;
-    opacity: 1;
+    &--input {
+      opacity: 1;
+    }
 
-    &::placeholder {
+    &--background {
+      width: 100%;
       opacity: 1;
     }
   }
