Выполняет задание 7 - Вкатываем кнопки слайдера

--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -273,12 +273,12 @@
 
     &:hover,
     &:focus {
-      color: $c-purple;
+      color: var(--theme-color, $c-purple);
       outline: none;
 
       &::after {
         opacity: 1;
-        background-color: $c-purple;
+        background-color: var(--theme-color, $c-purple);
       }
     }
   }
