--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -46,7 +46,7 @@
 
   &:hover,
   .social-block--active & {
-    color: $c-purple;
+    color: var(--theme-color, $c-purple);
 
     &::before {
       width: 112.5%;
@@ -55,11 +55,11 @@
   }
 
   &:focus {
-    color: $c-purple;
+    color: var(--theme-color, $c-purple);
     outline: none;
 
     &::before {
-      border-color: $c-purple;
+      border-color: var(--theme-color, $c-purple);
     }
 
     & + .social-block__list {
@@ -75,8 +75,8 @@
     &::before {
       width: 100%;
       height: 100%;
-      background-color: $c-purple;
-      border-color: $c-purple;
+      background-color: var(--theme-color, $c-purple);
+      border-color: var(--theme-color, $c-purple);
     }
   }
 }
@@ -185,19 +185,19 @@
   }
 
   &:hover {
-    color: $c-purple;
+    color: var(--theme-color, $c-purple);
   }
 
   &:focus {
-    color: $c-purple;
+    color: var(--theme-color, $c-purple);
     background-color: $c-light;
-    border-color: $c-purple;
+    border-color: var(--theme-color, $c-purple);
     outline: none;
   }
 
   &:active,
   &:active:focus {
-    color: $c-purple;
+    color: var(--theme-color, $c-purple);
     background-color: $c-light;
     border-color: $c-light;
   }
