--- a/source/scss/blocks/result-animation.scss
+++ b/source/scss/blocks/result-animation.scss
@@ -159,3 +159,24 @@
     animation: activate-leaf-blue-2 1.9s ease 1.5s both;
   }
 }
+
+@keyframes activate-result-button {
+  from {
+    opacity: 0;
+    transform: translate3d(3.5rem, 0, 0) rotate(90deg);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0) rotate(0);
+  }
+}
+
+.result--negative .result__button {
+  .screen--show & b {
+    animation: fade-in 0.3s ease 1.1s both;
+  }
+
+  .screen--show & span {
+    animation: activate-result-button 0.3s ease 1.1s both;
+  }
+}
