Выполняет задание 8 - Реализует анимацию иллюстрации главного приза

--- a/source/scss/general/mixins.scss
+++ b/source/scss/general/mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin landscape {
+  @media (orientation: landscape) {
+    @content;
+  }
+}
+
 @mixin mobile-portrait {
   @media (max-width: $mobile - 1) and (orientation: portrait) {
     @content;
