--- a/source/scss/blocks/prizes-animation.scss
+++ b/source/scss/blocks/prizes-animation.scss
@@ -2,6 +2,71 @@
   .screen.active & {
     @include accent-animation(0.4s, 0.7s, 1, 0.066s,
       // ПРИЗЫ
-      (3, 2, 1, 2, 2.5));
+        (3, 2, 1, 2, 2.5));
+  }
+}
+
+.prizes__item--journeys {
+  @include landscape {
+    transform: translate3d(100%, 0, 0);
+
+    .first-glance & {
+      transform: translate3d(0, 0, 0);
+      transition: transform 0.7s ease 4.1s;
+    }
+  }
+
+  .prizes__icon svg {
+    @include landscape {
+      transform: scale(1.3, 1.3);
+    }
+  }
+
+  .prizes__desc b {
+    @include landscape {
+      opacity: 0;
+
+      .first-glance & {
+        opacity: 1;
+        transition: opacity 0.1s ease 3.2s;
+      }
+    }
+  }
+
+  .prizes__desc span {
+    @include landscape {
+      opacity: 0;
+      transform: translate3d(1rem, 0, 0);
+
+      .first-glance & {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+        transition:
+          opacity 0.3s ease 3.3s,
+          transform 0.3s ease 3.3s;
+      }
+    }
+  }
+}
+
+.prizes__item--cases {
+  @include landscape {
+    opacity: 0;
+
+    .first-glance & {
+      opacity: 1;
+      transition: opacity 0.3s ease 4.5s;
+    }
+  }
+}
+
+.prizes__item--codes {
+  @include landscape {
+    opacity: 0;
+
+    .first-glance & {
+      opacity: 1;
+      transition: opacity 0.3s ease 6.9s;
+    }
   }
 }
