--- a/source/scss/blocks/prizes-animation.scss
+++ b/source/scss/blocks/prizes-animation.scss
@@ -16,12 +16,6 @@
     }
   }
 
-  .prizes__icon svg {
-    @include landscape {
-      transform: scale(1.3, 1.3);
-    }
-  }
-
   .prizes__desc b {
     @include landscape {
       opacity: 0;
@@ -55,7 +49,40 @@
 
     .first-glance & {
       opacity: 1;
-      transition: opacity 0.3s ease 4.5s;
+      transition: opacity 0.6s ease 4.2s;
+    }
+  }
+
+  .prizes__icon svg {
+    @include landscape {
+      transform: scale(1.5, 1.5);
+      transform-origin: right bottom;
+    }
+  }
+
+  .prizes__desc b {
+    @include landscape {
+      opacity: 0;
+
+      .first-glance & {
+        opacity: 1;
+        transition: opacity 0.1s ease 5.7s;
+      }
+    }
+  }
+
+  .prizes__desc span {
+    @include landscape {
+      opacity: 0;
+      transform: translate3d(1rem, 0, 0);
+
+      .first-glance & {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+        transition:
+          opacity 0.3s ease 5.8s,
+          transform 0.3s ease 5.8s;
+      }
     }
   }
 }
