--- a/source/scss/blocks/prizes-animation.scss
+++ b/source/scss/blocks/prizes-animation.scss
@@ -93,7 +93,40 @@
 
     .first-glance & {
       opacity: 1;
-      transition: opacity 0.3s ease 6.9s;
+      transition: opacity 0.6s ease 6.3s;
+    }
+  }
+
+  .prizes__icon svg {
+    @include landscape {
+      transform: scale(1.1, 1.1);
+      transform-origin: right bottom;
+    }
+  }
+
+  .prizes__desc b {
+    @include landscape {
+      opacity: 0;
+
+      .first-glance & {
+        opacity: 1;
+        transition: opacity 0.1s ease 7.9s;
+      }
+    }
+  }
+
+  .prizes__desc span {
+    @include landscape {
+      opacity: 0;
+      transform: translate3d(1rem, 0, 0);
+
+      .first-glance & {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+        transition:
+          opacity 0.3s ease 8s,
+          transform 0.3s ease 8s;
+      }
     }
   }
 }
