--- a/source/scss/animations/screen-animation.scss
+++ b/source/scss/animations/screen-animation.scss
@@ -12,20 +12,20 @@
 
 .screen--intro {
   background-color: $c-dark;
-  background-image: url("../img/scene.png");
+  background-image: url("../../img/scene.png");
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
 
   @include retina {
-    background-image: url("../img/scene@2x.png");
+    background-image: url("../../img/scene@2x.png");
   }
 
   @media (orientation: portrait) {
-    background-image: url("../img/scene-mob.png");
+    background-image: url("../../img/scene-mob.png");
 
     @include retina {
-      background-image: url("../img/scene-mob@2x.png");
+      background-image: url("../../img/scene-mob@2x.png");
     }
   }
 }
