--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -1,3 +1,13 @@
+@keyframes scale-down {
+  from {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
 @keyframes bounce-in {
   from {
     transform: scale3d(0, 0, 1);
