--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -7,7 +7,7 @@
 @import "general/keyframes.scss";
 
 // Blocks
-@import "blocks/animation-screen.scss";
+@import "animations/animation-screen";
 @import "blocks/accent-line.scss";
 @import "blocks/btn.scss";
 @import "blocks/chat.scss";
@@ -22,13 +22,13 @@
 @import "blocks/screen.scss";
 @import "blocks/slider.scss";
 @import "blocks/social-block.scss";
-@import "blocks/form-animation.scss";
-@import "blocks/game-animation.scss";
-@import "blocks/intro-animation.scss";
-@import "blocks/page-header-animation.scss";
-@import "blocks/prizes-animation.scss";
-@import "blocks/screen-animation.scss";
-@import "blocks/slider-animation.scss";
-@import "blocks/result-animation.scss";
-@import "blocks/rules-animation.scss";
-@import "blocks/social-block-animation.scss";
+@import "animations/form-animation";
+@import "animations/game-animation";
+@import "animations/intro-animation";
+@import "animations/page-header-animation";
+@import "animations/prizes-animation";
+@import "animations/screen-animation";
+@import "animations/slider-animation";
+@import "animations/result-animation";
+@import "animations/rules-animation";
+@import "animations/social-block-animation";
